--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
     <input type="number" name="molweight" id="mol" step="0.01" onchange="calc()">
     <label for="molweight">g/mol</label>
     <br>
+    <label for="conInEppi">conzentration in Eppi</label>
+    <input type="number" name="conInEppi" id="conEppi">
+    <select name="conInEppiUnit" id="conEppiUnit" onchange="calc()">
+            <option value="-12">picoMolar</option>
+            <option value="-9">nanoMolar</option>
+            <option value="-6">microMolar</option>
+            <option value="-3" selected="selected">milliMolar</option>
+            <option value="0">Molar</option>
+            <option value="3">kiloMolar</option>
     <div class="bordered">
         <label for="mass">Mass</label>
         <input type="number" name="mass" id="mass">
