change name kapitalletter

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <input type="number" name="molweight" id="mol" step="0.01" onchange="calc()">
     <label for="molweight">g/mol</label>
     <br>
-    <label for="conInEppi">conzentration in Eppi</label>
+    <label for="conInEppi">Conzentration in Eppi</label>
     <input type="number" name="conInEppi" id="conEppi">
     <select name="conInEppiUnit" id="conEppiUnit" onchange="calc()">
             <option value="-12">picoMolar</option>
